# collector-rs

./: Cargo.toml  README.md
config/: collector.yaml  log4rs.yaml
src/: main.rs
src/config/: mod.rs
src/core/: config.rs  mod.rs
src/graph/: mod.rs
src/input/: codec_frame.rs  length_base.rs  mod.rs  proto_frame.rs  service_frame.rs  tcp.rs  udp.rs
src/output/: common.rs  kafka.rs  mod.rs  rdkafka.rs
src/utils/: file.rs  mod.rs  tail.rs
